feat: adiciona download do APK e traduz botao

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <span class="badge">C++ / C</span>
                     </div>
                     <div style="display: flex; gap: 1rem; align-items: center;">
-                        <a href="#" class="btn" style="padding: 0.5rem 1rem; font-size: 0.8rem;">Download App</a>
+                        <a href="downloads/app-release.apk" class="btn" style="padding: 0.5rem 1rem; font-size: 0.8rem;" download>Baixar App</a>
                         <span style="font-size: 0.8rem; color: var(--text-dim);">* Desenvolvido 100% com auxílio de I.A.</span>
                     </div>
                 </article>
